--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseUrl = "http://blog.kalel.dk/"
+baseUrl = "http://mad.k-moeller.dk/"
 CanonifyUrls = true
 languageCode = "da-DK"
 title = "Madkasse Blog"
